<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".MainActivity"
                                                   tools:ignore="MissingClass,missingConstraints">
    
    
    <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/md_theme_dark_onSecondary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

    </com.google.android.material.appbar.MaterialToolbar>
    
    
    <com.github.sundeepk.compactcalendarview.CompactCalendarView
            android:id="@+id/compactcalendar_view"
            android:layout_width="fill_parent"

            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:layout_height="250dp"
            android:layout_marginTop="5dp"
            app:compactCalendarTargetHeight="250dp"
            app:compactCalendarBackgroundColor="#3E3636"
            app:compactCalendarCurrentDayBackgroundColor="#B71C1C"
            app:compactCalendarCurrentSelectedDayBackgroundColor="#E57373"
            app:compactCalendarMultiEventIndicatorColor="#fff"
            app:compactCalendarTextColor="#fff"
            app:compactCalendarTextSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_add"
            
            />
    
    <Button
            android:id="@+id/button_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="35dp"
            android:gravity="left"
            android:text="@string/show"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/compactcalendar_view"/>
    
    <Button
            android:id="@+id/button_modify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:gravity="center"
            android:text="@string/modify"
            app:layout_constraintTop_toBottomOf="@+id/compactcalendar_view"
            app:layout_constraintStart_toEndOf="@+id/button_show"
            app:layout_constraintEnd_toStartOf="@+id/button_delete"
            
            />
    
    <Button
            android:id="@+id/button_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="16dp"
            android:gravity="right"
            android:text="@string/delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/compactcalendar_view"/>
    
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/searchInputLayout"
            style="?attr/textInputFilledStyle"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:hint="@string/search_input"
            app:startIconDrawable="@drawable/ic_search"
            app:layout_constraintTop_toBottomOf="@+id/button_show"
            tools:ignore="HardcodedText,MissingConstraints"
            app:layout_constraintEnd_toStartOf="@+id/button_search"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp">
        
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="HardcodedText,SpeakableTextPresentCheck"
                android:textColorHint="#616161"/>
    
    </com.google.android.material.textfield.TextInputLayout>
    
    <Button
            android:id="@+id/button_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="16dp"
            android:gravity="right"
            android:text="@string/search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_delete"/>
    
    <Button
            
            android:id="@+id/button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_add_black"
            android:text="@string/add"
            android:contentDescription="@string/add"
            android:layout_marginTop="85dp"
            app:layout_constraintTop_toBottomOf="@+id/button_search"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:iconTint="#FA0202"/>


</androidx.constraintlayout.widget.ConstraintLayout>